# pdf-rag-system

./: .dockerignore  .env.example  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_TO_HUGGINGFACE.md  Dockerfile  HUGGINGFACE_SETUP.md  LICENSE  NETWORK_ISSUES_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY_STEPS.txt  QUICK_TOKEN_TIPS.md  README.md  START_APP_NOW.txt  START_DEPLOYMENT.txt  START_HERE.md  TEST_LOCALLY.md  TOKEN_OPTIMIZATION_GUIDE.md  app.py  app_simple.py  cli.py  compare_token_usage.py  config.py  deploy_to_hf.bat  docker-compose.yml  examples.py  install.bat  llm_handler.py  pdf_processor.py  prepare_github.py  prepare_hf_deployment.py  pruning_strategies.py  pyproject.toml  rag_system.py  requirements-minimal.txt  requirements.txt  requirements_hf.txt  (+10 more)
.github/: ghcr-build.yml  new.yml
.github/workflows/: docker.yml  test.yml
hf_deploy/: .gitignore  README_HF.md  app_hf.py
